# mastra-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  findings.md  progress.md  task_plan.md
auth/auth0/: Cargo.toml
auth/auth0/src/: lib.rs
auth/auth0/tests/: provider.rs
auth/better-auth/: Cargo.toml
auth/better-auth/src/: lib.rs
auth/better-auth/tests/: provider.rs
auth/clerk/: Cargo.toml
auth/clerk/src/: lib.rs
auth/clerk/tests/: provider.rs
auth/cloud/: Cargo.toml
auth/cloud/src/: lib.rs
auth/cloud/tests/: provider.rs
auth/firebase/: Cargo.toml
auth/firebase/src/: lib.rs
auth/firebase/tests/: provider.rs
auth/studio/: Cargo.toml
auth/studio/src/: lib.rs
auth/studio/tests/: provider.rs
auth/supabase/: Cargo.toml
auth/supabase/src/: lib.rs
auth/supabase/tests/: provider.rs
auth/workos/: Cargo.toml
auth/workos/src/: lib.rs
auth/workos/tests/: provider.rs
client-sdks/ai-sdk/: Cargo.toml
client-sdks/ai-sdk/src/: agent.rs  lib.rs  types.rs
client-sdks/client-js/: Cargo.toml  README.md
client-sdks/client-js/src/: client.rs  error.rs  lib.rs  types.rs
client-sdks/react/: Cargo.toml
client-sdks/react/src/: chat.rs  lib.rs  state.rs
deployers/cloud/: Cargo.toml
deployers/cloud/src/: lib.rs
deployers/cloudflare/: Cargo.toml
deployers/cloudflare/src/: lib.rs
deployers/netlify/: Cargo.toml
deployers/netlify/src/: lib.rs
deployers/vercel/: Cargo.toml
deployers/vercel/src/: lib.rs
docs/reference/: cli.md  client-js.md  create-mastra.md  mastracode.md  server-routes.md
docs/superpowers/specs/: 2026-03-12-mastra-rs-1to1-design.md
examples/: README.md
explorations/longmemeval/: Cargo.toml
explorations/longmemeval/src/: lib.rs
integrations/opencode/: Cargo.toml
integrations/opencode/src/: lib.rs
mastracode/: Cargo.toml  README.md
mastracode/src/: lib.rs  main.rs
observability/_examples/: Cargo.toml
observability/_examples/src/: lib.rs
observability/_test-utils/: Cargo.toml
observability/_test-utils/src/: lib.rs
observability/arize/: Cargo.toml
observability/arize/src/: lib.rs
observability/arize/tests/: exporter.rs
observability/braintrust/: Cargo.toml
observability/braintrust/src/: lib.rs
observability/braintrust/tests/: exporter.rs
observability/datadog/: Cargo.toml
observability/datadog/src/: lib.rs
observability/datadog/tests/: exporter.rs
observability/laminar/: Cargo.toml
observability/laminar/src/: lib.rs
observability/laminar/tests/: exporter.rs
observability/langfuse/: Cargo.toml
observability/langfuse/src/: lib.rs
observability/langfuse/tests/: exporter.rs
observability/langsmith/: Cargo.toml
observability/langsmith/src/: lib.rs
observability/langsmith/tests/: exporter.rs
observability/mastra/: Cargo.toml
observability/mastra/src/: error.rs  http.rs  lib.rs  model.rs
observability/mastra/tests/: core_http.rs
observability/otel-bridge/: Cargo.toml
observability/otel-bridge/src/: lib.rs
observability/otel-exporter/: Cargo.toml
observability/otel-exporter/src/: lib.rs
observability/otel-exporter/tests/: exporter.rs
observability/posthog/: Cargo.toml
observability/posthog/src/: lib.rs
observability/posthog/tests/: exporter.rs
observability/sentry/: Cargo.toml
observability/sentry/src/: lib.rs
observability/sentry/tests/: exporter.rs
pubsub/google-cloud-pubsub/: Cargo.toml
pubsub/google-cloud-pubsub/src/: lib.rs
pubsub/google-cloud-pubsub/tests/: pubsub.rs
server-adapters/_test-utils/: Cargo.toml
server-adapters/_test-utils/src/: lib.rs
server-adapters/express/: Cargo.toml
server-adapters/express/src/: lib.rs
server-adapters/fastify/: Cargo.toml
server-adapters/fastify/src/: lib.rs
server-adapters/hono/: Cargo.toml
server-adapters/hono/src/: lib.rs
server-adapters/koa/: Cargo.toml
server-adapters/koa/src/: lib.rs
stores/_test-utils/: Cargo.toml
stores/_test-utils/src/: lib.rs  provider_support.rs
stores/astra/: Cargo.toml
stores/astra/src/: lib.rs
stores/chroma/: Cargo.toml
stores/chroma/src/: lib.rs
stores/clickhouse/: Cargo.toml
stores/clickhouse/src/: lib.rs
stores/cloudflare/: Cargo.toml
stores/cloudflare-d1/: Cargo.toml
stores/cloudflare-d1/src/: lib.rs
stores/cloudflare/src/: lib.rs
stores/convex/: Cargo.toml
stores/convex/src/: lib.rs
stores/couchbase/: Cargo.toml
stores/couchbase/src/: lib.rs
stores/duckdb/: Cargo.toml
stores/duckdb/src/: lib.rs
stores/dynamodb/: Cargo.toml
stores/dynamodb/src/: lib.rs
stores/elasticsearch/: Cargo.toml
stores/elasticsearch/src/: lib.rs
stores/lance/: Cargo.toml
stores/lance/src/: lib.rs
stores/libsql/: Cargo.toml
stores/libsql/src/: lib.rs
stores/mongodb/: Cargo.toml
stores/mongodb/src/: lib.rs
stores/mssql/: Cargo.toml
stores/mssql/src/: lib.rs
stores/opensearch/: Cargo.toml
stores/opensearch/src/: lib.rs
stores/pg/: Cargo.toml
stores/pg/src/: lib.rs
stores/pinecone/: Cargo.toml
stores/pinecone/src/: lib.rs
stores/qdrant/: Cargo.toml
stores/qdrant/src/: lib.rs
stores/s3vectors/: Cargo.toml
stores/s3vectors/src/: lib.rs
stores/turbopuffer/: Cargo.toml
stores/turbopuffer/src/: lib.rs
stores/upstash/: Cargo.toml
stores/upstash/src/: lib.rs
stores/vectorize/: Cargo.toml
stores/vectorize/src/: lib.rs
voice/azure/: Cargo.toml
voice/azure/src/: lib.rs
voice/cloudflare/: Cargo.toml
voice/core/: Cargo.toml
voice/deepgram/: Cargo.toml
voice/elevenlabs/: Cargo.toml
voice/gladia/: Cargo.toml
voice/google/: Cargo.toml
voice/google-gemini-live-api/: Cargo.toml
voice/modelslab/: Cargo.toml
voice/murf/: Cargo.toml
voice/openai/: Cargo.toml
voice/openai-realtime-api/: Cargo.toml
voice/playai/: Cargo.toml
voice/sarvam/: Cargo.toml
voice/speechify/: Cargo.toml
workflows/_test-utils/: Cargo.toml
workflows/inngest/: Cargo.toml
workspaces/_test-utils/: Cargo.toml
workspaces/blaxel/: Cargo.toml
workspaces/core/: Cargo.toml
workspaces/daytona/: Cargo.toml
workspaces/e2b/: Cargo.toml
workspaces/gcs/: Cargo.toml
workspaces/s3/: Cargo.toml
(+24 files in other folders)
