[workspace]
resolver = "3"
members = [
  "mastracode",
  "packages/*",
  "packages/_vendored/*",
  "auth/*",
  "client-sdks/*",
  "deployers/*",
  "observability/*",
  "server-adapters/*",
  "stores/*",
  "voice/*",
  "workflows/*",
  "workspaces/*",
  "integrations/*",
  "pubsub/*",
  "explorations/*",
]
exclude = ["packages/_vendored"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["json", "macros"] }
bytes = "1.11.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
futures = "0.3.31"
indexmap = { version = "2.11.4", features = ["serde"] }
parking_lot = "0.12.4"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
schemars = { version = "1.0.4", features = ["chrono04", "indexmap2", "uuid1", "preserve_order"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }
