[package]
name = "mastracode"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
clap.workspace = true
mastra-core = { path = "../packages/core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
