[package]
name = "mastracode"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
mastra-core = { path = "../packages/core" }
mastra-memory = { path = "../packages/memory" }
mastra-store-libsql = { path = "../stores/libsql" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
