[package]
name = "mastra-client-sdks-ai-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
mastra-client-sdks-client-js = { path = "../client-js" }

[dev-dependencies]
axum.workspace = true
mastra-core = { path = "../../packages/core" }
mastra-memory = { path = "../../packages/memory" }
mastra-server = { path = "../../packages/server" }
tokio.workspace = true
