[package]
name = "mastra-client-sdks-client-js"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream.workspace = true
futures.workspace = true
indexmap.workspace = true
mastra-core = { path = "../../packages/core" }
mastra-server = { path = "../../packages/server" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
mastra-memory = { path = "../../packages/memory" }
tokio.workspace = true
