[package]
name = "mastra-client-sdks-react"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
futures.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
mastra-client-sdks-ai-sdk = { path = "../ai-sdk" }

[dev-dependencies]
axum.workspace = true
mastra-client-sdks-client-js = { path = "../client-js" }
mastra-core = { path = "../../packages/core" }
mastra-server = { path = "../../packages/server" }
tokio.workspace = true
