[package]
name = "mastra-observability--test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
mastra-observability-mastra = { path = "../mastra" }
serde_json = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
