[package]
name = "mastra-observability-mastra"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mastra-observability--test-utils = { path = "../_test-utils" }
tokio = { workspace = true }
